--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "prrte"]
 	path = 3rd-party/prrte
-	url = https://github.com/bentleyxia/prrte
+	url = https://github.com/bentleyxia/prrte.git
 	branch = blaze
 [submodule "openpmix"]
 	path = 3rd-party/openpmix
